<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity">首页</string>
    <string name="life">生活圈</string>
    <string name="group">圈子</string>
    <string name="fans">粉丝</string>
    <string name="news">24小时</string>
    <string name="title_activity_login">Sign in</string>
    <string name="xlistview_header_hint_normal">敢拉我就敢刷</string>
    <string name="xlistview_header_hint_ready">请刷新</string>
    <string name="xlistview_header_hint_loading">卖力获取中…</string>
    <string name="xlistview_header_last_time">此时此刻:</string>
    <string name="xlistview_footer_hint_normal">获取更多</string>
    <string name="xlistview_footer_hint_no_more">已经是最后一页了</string>
    <string name="xlistview_footer_hint_ready">请获取更多</string>
    <string name="smartcity_app_name">智享城市</string>
    <string name="smartcity_name">智享城市</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">城会玩</string>
    <string name="category">生活</string>
    <string name="groups">圈子</string>
    <string name="setting">粉</string>
    <string name="wuhan">武汉</string>
    <string name="shenzhen">深圳</string>
    <string name="jingzhou">荆州</string>
    <string name="shanghai">上海</string>
    <string name="beijing">北京</string>
    <string name="allcircle"> 全部圈子</string>
    <string name="pyq"> 朋友圈</string>
    <string name="youlike"> 猜你喜欢</string>
    <string name="more"> 更多</string>
    <string name="tongzhi">通知</string>
    <string name="shiping">视频</string>
    <string name="xiangce">相册</string>
    <string name="huodong">活动</string>
    <string name="xiangji">相机</string>
    <string name="quanzixiaozu">圈子小组</string>
    <string name="quanzichengyuan">圈子成员</string>
    <string name="circle_code">圈子二维码</string>
    <string name="xiaoximiandarao">消息免打扰</string>
    <string name="join"> 加入</string>
    <string name="tojoin"> 申请加入</string>
    <string name="isjoin">已加入</string>
    <string name="create_member">创建者</string>
    <string name="circle_number">圈子数</string>
    <string name="circle_member">圈子成员</string>
    <string name="activity_number">活动次数</string>
    <string name="circle_exit">退出圈子</string>
    <string name="search"> 搜索</string>
    <string name="biaoqian">标签</string>
    <string name="circle_name">圈子名称</string>
    <string name="circle_wordnumber">限200字以内</string>
    <string name="circle_introduce">请输入圈子介绍，吸引更多伙伴加入...</string>
    <string name="circle_prompt">该圈子人数在1天内未满10人，将自动解散</string>
    <string name="life_1">时尚衣服</string>
    <string name="life_2">潮流鞋包</string>
    <string name="life_3">运动塑身</string>
    <string name="life_4">健康养生</string>
    <string name="life_5">化妆美甲</string>
    <string name="life_6">美容美体</string>
    <string name="life_7">家具日常</string>
    <string name="life_8">数码科技</string>
    <string name="life_goods">商品</string>
    <string name="life_merchant">商家</string>
    <string name="life_near">附近</string>
    <string name="life_screen">筛选</string>
    <string name="setting_order_all">全部订单</string>
    <string name="setting_order_pay">待付款</string>
    <string name="setting_order_receive">已付款</string>
    <string name="setting_order_evaluate">已完成</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fen_city_accounts">城市账户</string>
    <string name="fen_pay_activies">买单的活动</string>
    <string name="fen_order">订单</string>
    <string name="fen_cart">购物车</string>
    <string name="fen_shared">分享</string>
    <string name="fen_setting">设置</string>
    <string name="fen_send_publish_activites">发布的活动</string>
    <string name="fen_manager_clicer">管理尊享圈</string>
    <string name="fen_create_circle">创建圈子</string>
    <string name="fen_notify">通知</string>
    <string name="fen_enshrine">收藏</string>
    <string name="setting_touxiang">设置头像</string>
    <string name="edite_tv_head">昵称</string>
    <string name="edite_tv_sex">性别</string>
    <string name="edite_tv_domicile">居住地</string>
    <string name="edite_tv_name">签名</string>
    <string name="set_message_notify">消息通知</string>
    <string name="set_user_agreement">用户协议</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="set_about_me">关于我们</string>
    <string name="loginout">退出账号</string>
    <string name="current_version">当前版本：0.2.1</string>
    <string name="must_pay">立即秒杀</string>
    <string name="dingyue">订阅</string>
    <string name="pinglun">评论</string>
    <string name="hotpinglun">热门评论</string>
    <string name="left_drawer_no_login_tip">登录后，将推荐给你更多感兴趣的文章</string>
    <string name="left_drawer_item_search">搜索</string>
    <string name="left_drawer_item_favorite">收藏</string>
    <string name="left_drawer_item_message">消息</string>
    <string name="left_drawer_item_offline">离线</string>
    <string name="left_drawer_item_offline_cancel">取消离线</string>
    <string name="left_drawer_item_activity">活动</string>
    <string name="left_drawer_item_setting">设置</string>
    <string name="left_drawer_item_feedback">反馈</string>
    <string name="left_drawer_item_appstore">精彩应用</string>
    <string name="drawer_right_logout_hint_text">"登录后 可关注好友评论和收藏"</string>
    <string name="drawer_right_tip_no_login">未登录</string>
    <string name="ss_pattern_update">发现%1$d条更新</string>
    <string name="ss_have_a_rest">暂无更新, 休息一会儿</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_day_mode">日间模式</string>
    <string name="setting_list_mode">列表显示摘要</string>
    <string name="setting_font_size">字体大小</string>
    <string name="setting_list_comment">列表页评论</string>
    <string name="setting_refresh_list">列表页刷新</string>
    <string name="setting_load_image">2G/3G网络流量</string>
    <string name="setting_notify">推送通知</string>
    <string name="setting_interactive">互动插件</string>
    <string name="setting_share_when_favor">收藏时转发</string>
    <string name="setting_share_when_diggbury">顶踩时转发</string>
    <string name="setting_clear">清理缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_recommend">精彩应用推荐</string>
    <string name="setting_update">检查新版本</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_use_swipe">左右翻页</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_close_shake_hand">关闭摇一摇切换夜间模式</string>
    <string name="setting_use_help">使用帮助</string>
    <string name="app_copyright">© 头条网 toutiao.com</string>
    <string name="favorite_btn_delete">删除</string>
    <string name="favorite_btn_edit">编辑</string>
    <string name="favorite_btn_cancel">取消</string>
    <string name="dislike_dlg_lable_speech">读文章</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="label_cancel_dislike">撤消</string>
    <string name="day_today">今天</string>
    <string name="day_yesterday">昨天</string>
    <string name="day_before">前天</string>
    <string name="search_count_fmt">发现%1$s篇文章</string>
    <string name="pattern_update">发现%1$d条更新</string>
    <string name="city_category_list_header">点击选择其他城市</string>
    <string name="city_category_list_hint">选择城市，立即查看本地新闻</string>
    <string name="city_category_list_notify_no_city">请先选择您关注的城市</string>
    <string name="retry_large_image"><u>加载失败，点击重试</u></string>
    <string name="begin_regist">正在注册..</string>
    <string name="regist_success">注册成功</string>
    <string name="user_exite">用户已注册</string>
    <string name="name_is_null">用户名不能为空!</string>
    <string name="pwd_is_null">密码不能为空!</string>
    <string name="con_time_out">连接失败!</string>
    <string name="loginin">正在登陆..</string>
    <string name="phone_is_not_null">手机号不能为空</string>
    <string name="logining">登录中···</string>
    <string name="accept_session">接受</string>
    <string name="reject_session">拒绝</string>
    <string name="doodle_clear">清屏</string>
    <string name="doodle_back">上一步</string>
    <string name="readed">已读</string>
    <string name="about">关于</string>
    <string name="logout">注销</string>
    <string name="version">版本号:</string>
    <string name="account">帐号:</string>
    <string name="chat">聊天</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="network_forbidden_login">你被服务器禁止登录，详询客服</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="kick_out">帐号在其它设备登录</string>
    <string name="edittext_length_tips">你输入的字数已经超过了限制！</string>
    <string name="file_transfer">文件云存储</string>
    <string name="file_browser">文件浏览器</string>
    <string name="upload_text">上传</string>
    <string name="download_text">下载</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="how_to_get_account">如何获取帐号</string>
    <string name="multi_client_management">多端登录管理</string>
    <string name="kick_other_client_prompt">踢掉 %1$s</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="search_advanced_team">搜索高级群</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="copyright">Copyright ©1997-2016 网易公司版权所有</string>
    <string name="edit_nick">修改昵称</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>
    <string name="edit">编辑</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>
    <string name="create_team_activity">创建群聊</string>
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
</resources>