<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/c_kuang"
        android:orientation="vertical">
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        fresco:roundAsCircle="true"
        fresco:roundedCornerRadius="180dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/text_20"
        android:text="女人花登山圈"/>

    <TextView
        android:id="@+id/quanzi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:drawableLeft="@mipmap/icon_vip"
        android:textSize="15sp"
        android:textColor="@color/red2"
        android:text="尊享圈"/>

    <TextView
        android:id="@+id/ren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:drawableLeft="@mipmap/c_ren"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:text="尊享圈"/>

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:text="在我眼中你是最好的"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/huodong"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@mipmap/c_join"
            android:textColor="@color/home_color"
            android:textSize="13sp"
            android:text="@string/huodong"/>
        <TextView
            android:id="@+id/shiping"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@mipmap/c_join"
            android:textColor="@color/home_color"
            android:textSize="13sp"
            android:text="@string/shiping"/>
        <TextView
            android:id="@+id/xiangji"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@mipmap/c_join"
            android:textColor="@color/home_color"
            android:textSize="13sp"
            android:text="@string/xiangji"/>
        <TextView
            android:id="@+id/tongzhi"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@mipmap/c_join"
            android:textColor="@color/home_color"
            android:textSize="13sp"
            android:text="@string/tongzhi"/>
    </LinearLayout>

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        style="@style/text_15"
        android:text="@string/quanzixiaozu"/>
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>