<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_bar1"
        android:id="@+id/title_bar"></include>
    <RelativeLayout
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            style="@style/text_15"
            android:text="@string/circle_code"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/g_jiantous_right"/>
    </RelativeLayout>
    <include layout="@layout/line_gray"></include>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            style="@style/text_15"
            android:text="@string/xiaoximiandarao"/>
        <ToggleButton
            android:id="@+id/mTogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/switch_btn"
            android:checked="false"
            android:gravity="center_vertical"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>
    <include layout="@layout/line_gray"></include>
    
    <TextView
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="@mipmap/c_kuang1"
        android:textColor="@color/home_color"
        android:text="@string/circle_exit"/>
</LinearLayout>