<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/x40"
                android:paddingRight="@dimen/x40">

                <LinearLayout
                    android:id="@+id/notice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/x100"
                        android:layout_height="@dimen/x100"
                        android:src="@mipmap/c_quanzitongzhi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tongzhi"
                        android:textColor="@color/black1"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/x100"
                        android:layout_height="@dimen/x100"
                        android:src="@mipmap/c_quanzishipin" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shiping"
                        android:textColor="@color/black1"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/x100"
                        android:layout_height="@dimen/x100"
                        android:src="@mipmap/c_quanzixiangce" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xiangce"
                        android:textColor="@color/black1"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/active"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/x100"
                        android:layout_height="@dimen/x100"
                        android:src="@mipmap/c_quanzihuodong" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/huodong"
                        android:textColor="@color/black1"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rect_blues"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/quanzichengyuan"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <!--<HorizontalScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_height="300dp">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">-->

            <GridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:numColumns="4"></GridView>
            <!--    </LinearLayout>
            </HorizontalScrollView>-->

            <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="1dp"
                android:src="@color/gray" />

            <RelativeLayout
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/circle_code"
                    android:textColor="@color/black1"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/b_back_right" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/xiaoximiandarao"
                    android:textColor="@color/black1"
                    android:textSize="18sp" />

                <ToggleButton
                    android:id="@+id/mTogBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/switch_btn"
                    android:checked="false"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@color/gray" />

            <TextView
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:background="@drawable/rect_blue"
                android:gravity="center"
                android:text="@string/circle_exit"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>